fix(styles): post modal

--- a/components/atoms/dropZone/dropZone.module.scss
+++ b/components/atoms/dropZone/dropZone.module.scss
@@ -84,11 +84,11 @@
 
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 0.35rem var(--bg-secondary), 0 0 0 0.65rem var(--color-primary);
+    box-shadow: 0 0 0 0.35rem var(--bg-gray), 0 0 0 0.65rem var(--color-primary);
   }
 
   &:hover {
-    transform: scale(1.1);
+    transform: scale(1.05);
   }
 }
 
@@ -99,5 +99,5 @@
 }
 
 .input:focus~.buttonInput {
-  box-shadow: var(--shadow-focus);
+  box-shadow: 0 0 0 0.35rem var(--bg-gray), 0 0 0 0.65rem var(--color-primary);
 }
