--- a/components/molecules/listModal/listModal.module.scss
+++ b/components/molecules/listModal/listModal.module.scss
@@ -12,7 +12,6 @@
   position: relative;
   width: 100%;
 
-
   @include common.mediaquery('sm') {
     width: auto;
     min-width: 40rem;
@@ -26,6 +25,10 @@
   flex-grow: 1;
   padding: 1.5rem 2rem;
   border-radius: var(--radius-medium) var(--radius-medium) 0 0;
+
+  @include common.mobile-landscape {
+    padding: 0.75rem 2rem;
+  }
 }
 
 .listItem {
@@ -50,6 +53,10 @@
 }
 
 .listItemLast {
+  @include common.mobile-landscape {
+    border-radius: 0 0 var(--radius-medium) var(--radius-medium);
+  }
+
   @include common.mediaquery('lg') {
     border-radius: 0 0 var(--radius-medium) var(--radius-medium);
   }
@@ -70,5 +77,9 @@
   @include common.mediaquery('lg') {
     gap: 2rem;
     padding: 1.5rem 3rem;
+  }
+
+  @include common.mobile-landscape {
+    padding: 0.75rem 2rem;
   }
 }
