--- a/components/organisms/homepagePost/homepagePost.module.scss
+++ b/components/organisms/homepagePost/homepagePost.module.scss
@@ -1,12 +1,16 @@
 @use '/styles/common.scss';
 
 .post {
-  border-radius: var(--radius-medium);
+  border-radius: var(--radius-small);
   background-color: var(--bg-primary);
   position: relative;
   box-shadow: var(--shadow-secondary);
   width: var(--postWidth);
   margin: 0 auto;
+
+  @include common.mediaquery('lg') {
+    border-radius: var(--radius-medium);
+  }
 }
 
 img.imageLoading {
