--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -4,18 +4,23 @@
   display: grid;
   grid-template-columns: 4.5rem 1fr;
   grid-template-rows: 1fr auto;
-  padding: 1rem;
+  padding: 1rem 0;
   row-gap: 1rem;
   column-gap: 0.25rem;
   place-content: center;
+  border-bottom: var(--border-primary);
 
   @include common.mediaquery('lg') {
-    padding: 1rem 0;
     column-gap: 1rem;
+    row-gap: 1rem;
     grid-template-columns: max-content 1fr;
   }
 
-  border-bottom: var(--border-primary);
+  @include common.mediaquery('xl') {
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
+  }
+
 }
 
 .link {
@@ -27,6 +32,10 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
+
+  @include common.mediaquery('lg') {
+    margin-left: 0.5rem;
+  }
 }
 
 .avatar {
@@ -57,6 +66,7 @@
 }
 
 .commentText {
+  white-space: pre-line;
   word-break: break-all;
 }
 
@@ -85,6 +95,7 @@
   border: none;
   background-color: transparent;
   align-items: center;
+  cursor: pointer;
 
   >svg {
     width: 2rem;
