--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -7,31 +7,90 @@
 
 .account {
   display: grid;
-  grid-template-columns: 1fr 2fr 0.5fr;
+  grid-template-columns: 1fr;
   position: relative;
 
   @include common.mediaquery('lg') {
-    grid-template-columns: 1fr 3fr 0.75fr;
+    align-items: center;
+    column-gap: 5rem;
+    grid-template-columns: 1fr 1.75fr;
+    grid-template-rows: auto auto 1fr 1fr;
   }
-
 }
 
 .avatar {
-  --account-avatar-size: 8rem;
+  --account-avatar-size: 11rem;
   width: var(--account-avatar-size);
   height: var(--account-avatar-size);
-  grid-row: 1 / 3;
+  margin: 1rem 0;
+  justify-self: center;
 
   @include common.mediaquery('lg') {
     --account-avatar-size: 14rem;
     width: var(--account-avatar-size);
     height: var(--account-avatar-size);
+    margin: 0;
+    grid-column: 1/1;
+    grid-row: 1/3;
+    position: relative;
+    top: 2rem;
+  }
+}
 
-    justify-self: flex-start;
-    grid-row: 1 / 4;
 
-    margin-left: 2rem;
-    margin-top: 2rem;
+.username {
+  font-size: 2.5rem;
+  text-align: center;
+  align-self: center;
+
+  &::before {
+    content: '@';
+  }
+
+  @include common.mediaquery('lg') {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    text-align: left;
+    font-size: 3.5rem;
+  }
+}
+
+.name {
+  font-weight: 600;
+  text-align: center;
+
+  @include common.mediaquery('lg') {
+    text-align: left;
+    grid-column: 2/3;
+    grid-row: 3/4;
+    font-size: 2rem;
+  }
+}
+
+.bio {
+  color: var(--text-secondary);
+  text-align: center;
+
+  @include common.mediaquery('lg') {
+    font-size: 2rem;
+    text-align: left;
+    grid-column: 2/3;
+    grid-row: 4/5;
+  }
+}
+
+.button {
+  display: flex;
+  margin: 1.5rem 0;
+  align-items: center;
+  gap: 0.5rem;
+  text-transform: capitalize;
+  justify-self: center;
+
+  @include common.mediaquery('lg') {
+    position: relative;
+    margin: 0;
+    grid-row: 4/5;
   }
 }
 
@@ -39,24 +98,17 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin-top: 2rem;
-  grid-column: 1 / 4;
-  grid-row: 5 / 6;
-  padding-bottom: 2rem;
+  padding: 0 2rem;
+  margin-top: 1rem;
 
   @include common.mediaquery('lg') {
     display: flex;
+    align-items: center;
+    justify-content: flex-start;
     margin: 0;
     padding: 0;
-    margin-bottom: 1.5rem;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
     gap: 4rem;
-    justify-content: stretch;
-
-    &::before {
-      display: none;
-    }
+    grid-row: 2/3;
   }
 }
 
@@ -88,98 +140,4 @@
   &::first-letter {
     text-transform: uppercase;
   }
-}
-
-.username {
-  font-weight: 700;
-  grid-column: 2 / 3;
-  font-size: 3rem;
-
-  &::before {
-    content: '@';
-  }
-
-  @include common.mediaquery('lg') {
-    font-size: 3.5rem;
-  }
-}
-
-.name {
-  margin-top: 3rem;
-  font-weight: 600;
-  grid-column: 1 / 4;
-
-  @include common.mediaquery('lg') {
-    margin-top: 0;
-    font-size: 2rem;
-    line-height: 1.5em;
-    grid-column: 2 / 3;
-    grid-row: 3 / 4;
-  }
-}
-
-.bio {
-  color: var(--text-secondary);
-  grid-column: 1 / 4;
-
-  @include common.mediaquery('lg') {
-    font-size: 2rem;
-    grid-column: 2 / 3;
-    grid-row: 4 / 5;
-  }
-}
-
-.followButton {
-  grid-row: 2 / 3;
-  grid-column: 2 / 4;
-  justify-self: flex-start;
-
-  @include common.mediaquery('lg') {
-    place-self: center;
-    grid-row: auto;
-    grid-column: auto;
-    font-size: 2rem;
-    margin-top: 0;
-    position: relative;
-    left: -2rem;
-  }
-}
-
-.menuButton {
-  background-color: transparent;
-  border: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-column: 3 / 5;
-  grid-row: 1 / 1;
-  cursor: pointer;
-
-  @include common.mediaquery('lg') {
-    place-self: center;
-    position: static;
-    font-size: 3rem;
-    grid-row: 1/2;
-    gap: 1rem;
-    grid-column: 3 / 4;
-  }
-}
-
-.menuButtonText {
-  display: none;
-
-  @include common.mediaquery('lg') {
-    text-transform: capitalize;
-    display: inline;
-  }
-}
-
-.menu {
-  background-color: var(--bg-primary);
-  border-radius: var(--radius-medium);
-  padding: 3rem;
-}
-
-.menuList {
-  list-style: none;
 }
