--- a/components/molecules/postSlider/postSlider.module.scss
+++ b/components/molecules/postSlider/postSlider.module.scss
@@ -36,9 +36,12 @@
   flex-shrink: 0;
   pointer-events: none;
   width: 32rem;
+  max-height: 37rem;
 
   @include common.mediaquery('lg') {
     width: 45rem;
+    max-height: 45rem;
+    object-fit: contain;
   }
 }
 
@@ -73,7 +76,7 @@
     box-shadow: var(--shadow-focus);
   }
 
-  >svg {
+  > svg {
     stroke-width: 3;
   }
 }
