--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -35,6 +35,11 @@
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
+  &:hover,
+  &:focus {
+    background-color: var(--bg-gray);
+  }
+
   &:focus {
     box-shadow: inset 0 0 0 2px var(--color-primary), 0 0 0 0.35rem var(--bg-secondary), 0 0 0 0.65rem var(--color-primary);
   }
