--- a/components/atoms/textArea/textArea.module.scss
+++ b/components/atoms/textArea/textArea.module.scss
@@ -1,39 +1,47 @@
 @use '/styles/common.scss';
 
 .textArea {
-  border-radius: var(--radius-small);
-  background-color: var(--bg-gray);
-  border: none;
-  min-width: 100%;
-  width: 100%;
-  resize: vertical;
-  min-height: 12rem;
-  height: 12rem;
-  padding: 1rem;
+   border-radius: var(--radius-small);
+   border: none;
+   min-width: 100%;
+   width: 100%;
+   resize: vertical;
+   min-height: 12rem;
+   height: 12rem;
+   padding: 1rem;
+   background-color: transparent;
+   border: var(--border-primary);
 
-  box-shadow: var(--shadow-secondary);
-  transition: box-shadow 0.2s ease;
+   box-shadow: var(--shadow-secondary);
+   transition: all 0.2s ease;
 
-  &:focus {
-    outline: none;
-    border-color: var(--color-primary);
-    box-shadow: var(--shadow-focus);
-  }
+
+   &:hover,
+   &:focus {
+      background-color: var(--bg-gray);
+   }
+
+   &:focus {
+      outline: none;
+      box-shadow: var(--shadow-focus);
+      border-color: var(--color-primary);
+   }
 }
 
 .label {
-  color: var(--text-secondary);
-  text-transform: capitalize;
-  position: relative;
-  top: -0.5rem;
+   color: var(--text-secondary);
+   text-transform: capitalize;
+   position: relative;
+   top: -0.5rem;
 }
 
 .error {
-  color: var(--color-error);
-  font-weight: 600;
-  font-size: 1.5rem;
+   color: var(--color-error);
+   font-weight: 600;
+   font-size: 1.5rem;
+   margin-top: 0.5rem;
 
-  @include common.mediaquery('lg') {
-    font-size: 2rem;
-  }
+   @include common.mediaquery('lg') {
+      font-size: 2rem;
+   }
 }
