--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -41,7 +41,7 @@
   }
 
   &:focus {
-    box-shadow: inset 0 0 0 2px var(--color-primary), 0 0 0 0.35rem var(--bg-secondary), 0 0 0 0.65rem var(--color-primary);
+    box-shadow: var(--shadow-focus);
   }
 
   &:disabled {
