--- a/components/atoms/signInButton/signInButton.module.scss
+++ b/components/atoms/signInButton/signInButton.module.scss
@@ -1,11 +1,12 @@
 .button {
   border-radius: var(--radius-small);
-  padding: 0.7rem 2.5rem;
+  padding: 0.7rem 2rem;
   background-color: var(--color-primary);
   color: var(--color-white);
   font-weight: 500;
   border: none;
   transition: box-shadow 0.2s ease;
+  text-align: center;
 
   &::first-letter {
     text-transform: uppercase;
