--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -31,13 +31,15 @@
 
   --shadow-primary: 0 4px 10px 2px rgba(0, 0, 0, 0.15);
   --shadow-secondary: 0 0 0 1px rgb(0, 0, 0, 12%), 0 2px 4px rgb(0, 0, 0, 5%), 0 12px 24px rgb(0, 0, 0, 5%);
-  --shadow-focus: 0 0 0 0.35rem var(--bg-secondary), 0 0 0 0.6rem var(--color-primary);
+
+  --shadow-focus-size: 3px;
+  --shadow-focus: 0 0 0 var(--shadow-focus-size) var(--bg-secondary), 0 0 0 calc(var(--shadow-focus-size) * 2) var(--color-primary);
 
 
   --itemSize: 2.75rem;
   --create-post-width: min(80rem, 80%);
 
-  --backdrop-blur: blur(16px) saturate(2);
+  --backdrop-blur: blur(18px) saturate(1.6);
 
   --postWidth: 32rem;
 
