--- a/components/atoms/signInButton/signInButton.module.scss
+++ b/components/atoms/signInButton/signInButton.module.scss
@@ -5,7 +5,7 @@
   color: var(--color-white);
   font-weight: 500;
   border: none;
-  transition: box-shadow 0.2s ease;
+  transition: box-shadow var(--transition-fast);
   text-align: center;
 
   &::first-letter {
