--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -28,6 +28,7 @@
   --radius-small: 0.8rem;
   --radius-medium: 1.5rem;
 
+  --transition-fast: 0.2s ease;
 
   --shadow-primary: 0 4px 10px 2px rgba(0, 0, 0, 0.15);
   --shadow-secondary: 0 0 0 1px rgb(0, 0, 0, 12%), 0 2px 4px rgb(0, 0, 0, 5%), 0 12px 24px rgb(0, 0, 0, 5%);
