--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -5,7 +5,7 @@
   color: var(--color-white);
   font-weight: 500;
   border: none;
-  transition: all 0.2s ease;
+  transition: all var(--transition-fast);
   cursor: pointer;
 
   &::first-letter {
