--- a/components/molecules/commentForm/commentForm.module.scss
+++ b/components/molecules/commentForm/commentForm.module.scss
@@ -14,7 +14,7 @@
   border-bottom-right-radius: 0;
   border: var(--border-primary);
   padding: 0.5rem;
-  transition: all 0.2s ease;
+  transition: background-color var(--transition-fast);
 
 
   &:hover,
