--- a/components/molecules/confirmationAlert/confirmationAlert.module.scss
+++ b/components/molecules/confirmationAlert/confirmationAlert.module.scss
@@ -1,18 +1,19 @@
 @use '/styles/common.scss';
 
 .container {
-  width: 80%;
+  max-width: 85%;
+  min-width: 75%;
   background-color: var(--bg-primary);
   border-radius: var(--radius-medium);
   position: relative;
-  padding: 2rem;
+  padding: 2rem 3rem;
 
   display: flex;
   flex-direction: column;
   gap: 3rem;
 
   @include common.mediaquery('lg') {
-    width: auto;
+    min-width: unset;
     gap: 4rem;
     padding: 4rem 5rem;
   }
