--- a/components/molecules/postSlider/postSlider.module.scss
+++ b/components/molecules/postSlider/postSlider.module.scss
@@ -83,7 +83,7 @@
   right: 1rem;
 }
 
-.statusDots {
+.postSliderProgress {
   position: absolute;
   bottom: 1rem;
   display: flex;
@@ -96,13 +96,15 @@
   z-index: 2;
   list-style-type: none;
 
-  background-color: var(--bg-primary);
-  border-radius: var(--radius-small);
   padding: 0.75rem 1.5rem;
+
+  background-color: var(--bg-blur);
+  backdrop-filter: var(--backdrop-blur);
+  border-radius: var(--radius-small);
   box-shadow: var(--shadow-secondary);
 }
 
-.dot {
+.progressDot {
   width: 1.5rem;
   height: 1.5rem;
 
