--- a/components/pages/account/account.module.scss
+++ b/components/pages/account/account.module.scss
@@ -42,6 +42,7 @@
   font-size: 2.5rem;
   text-align: center;
   align-self: center;
+  margin-bottom: 1rem;
 
   &::before {
     content: '@';
@@ -52,6 +53,7 @@
     grid-row: 1/2;
     text-align: left;
     font-size: 3.5rem;
+    margin-bottom: 0;
   }
 }
 
@@ -98,8 +100,7 @@
   list-style: none;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  padding: 0 2rem;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 
   @include common.mediaquery('lg') {
     display: flex;
