--- a/components/molecules/postButtons/postButtons.module.scss
+++ b/components/molecules/postButtons/postButtons.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: flex-start;
   gap: 2rem;
-  margin: 1rem 1rem;
+  padding: 1rem;
 }
 
 .item {
@@ -12,10 +12,10 @@
   flex-direction: column;
   font-size: 3rem;
 
-}
 
-.itemLast {
-  margin-left: auto;
+  &:last-child {
+    margin-left: auto;
+  }
 }
 
 .button {
