--- a/components/molecules/postSlider/postSlider.module.scss
+++ b/components/molecules/postSlider/postSlider.module.scss
@@ -18,7 +18,9 @@
   position: relative;
   overflow: hidden;
 
-  border-block: var(--border-primary);
+  @include common.mobile-landscape {
+    min-height: 25rem;
+  }
 }
 
 .figure {
@@ -96,12 +98,10 @@
   margin: 0 auto;
   left: 0;
   right: 0;
-  gap: 1rem;
+  gap: 0.5rem;
   z-index: 2;
   list-style-type: none;
-
-  padding: 0.75rem 1.5rem;
-
+  padding: 0.5rem 0.75rem;
   background-color: var(--bg-blur);
   backdrop-filter: var(--backdrop-blur);
   border-radius: var(--radius-small);
@@ -109,9 +109,8 @@
 }
 
 .progressDot {
-  width: 1.5rem;
-  height: 1.5rem;
-
+  width: 1.25rem;
+  height: 1.25rem;
   background-color: var(--color-primary);
   border-radius: 100%;
 }
