--- a/components/pages/collection/collection.module.scss
+++ b/components/pages/collection/collection.module.scss
@@ -3,27 +3,16 @@
 .container {
   display: grid;
   grid-template-columns: 1fr;
-  align-items: flex-start;
+  align-items: center;
+  justify-content: center;
   gap: 3rem;
 
-  @include common.mediaquery('sm') {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
   @include common.mediaquery('lg') {
-    grid-template-columns: repeat(3, 1fr);
     gap: 5rem;
   }
 }
 
 .heading {
+  text-align: center;
   margin-bottom: 2rem;
-
-  @include common.mediaquery('sm') {
-    grid-column: 1 / 3;
-  }
-
-  @include common.mediaquery('lg') {
-    grid-column: 1 / 4;
-  }
 }
