--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -19,7 +19,7 @@
 }
 
 @mixin mobile-landscape {
-  @media screen and (max-width: 1050px) and (orientation: landscape) {
+  @media screen and (max-width: 1050px) and (max-height: 500px) and (orientation: landscape) {
     @content;
   }
 }
