--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -3,14 +3,14 @@
 .container {
   position: relative;
   z-index: 1;
-  width: 35rem;
+  width: 36rem;
   background-color: var(--bg-primary);
   left: 0;
   right: 0;
   bottom: 0;
   top: 0;
   overflow-y: scroll;
-  border-radius: var(--radius-small);
+  border-radius: var(--radius-small) var(--radius-small) 0 0;
   max-height: 70vh;
 
   @include common.mobile-landscape {
@@ -18,7 +18,7 @@
     display: grid;
     overflow-y: unset;
     grid-template-columns: 25rem 25rem;
-    grid-template-rows: auto auto 1fr;
+    grid-template-rows: auto auto auto 1fr;
   }
 
 
@@ -40,7 +40,13 @@
 
 }
 
+.likesCount {
+  grid-column: 2 / 3;
+
+}
+
 .postHeader {
+  padding: 0.5rem 1rem;
 
   @include common.mobile-landscape {
     grid-column: 2 / 3;
@@ -51,25 +57,33 @@
   }
 }
 
-.imgLoading {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  position: absolute;
+.postFooter {
+  padding: 0 1rem;
+  padding-top: 1rem;
+}
+
+.postButtons {
+  grid-column: 2 / 3;
+  padding-right: 1rem;
+
+  @include common.mobile-landscape {
+    padding: 0 1rem;
+  }
 }
 
 
-.postImg {
-  margin: auto;
-  margin-bottom: 2rem;
-  object-fit: contain;
-  background-color: var(--bg-black);
+.commentsContainer {
+  margin-top: 1rem;
+  padding: 0.5rem 1rem;
+
+  @include common.mobile-landscape {
+    grid-column: 2 / 3;
+    margin-top: 0;
+    height: 10rem;
+  }
 
   @include common.mediaquery('lg') {
-    grid-row: 1 / 3;
-    margin: 0;
-    width: 100%;
-    height: 100%;
+    grid-column: 2 / 3;
   }
 }
 
@@ -81,7 +95,7 @@
   }
 }
 
-.comments {
+.commentsList {
   height: auto;
   overflow-y: scroll;
   display: flex;
@@ -98,34 +112,8 @@
     grid-column: 2 / 3;
     height: 100%;
     margin-top: 1rem;
-    max-height: 45rem;
+    max-height: 30rem;
   }
-}
-
-.commentsContainer {
-  padding: 0 1rem;
-  margin-top: 1rem;
-
-  @include common.mobile-landscape {
-    grid-column: 2 / 3;
-    margin-top: 0;
-    height: 10rem;
-  }
-
-  @include common.mediaquery('lg') {
-    grid-column: 2 / 3;
-    padding: 0 2.5rem;
-  }
-}
-
-.postButtons {
-  grid-column: 2 / 3;
-  padding: 1rem 2.5rem;
-
-  @include common.mobile-landscape {
-    padding: 0 1rem;
-  }
-
 }
 
 .slider {
@@ -145,8 +133,8 @@
   z-index: 2;
   height: 100%;
   object-fit: contain;
-  width: 35rem;
-  max-height: 35rem;
+  width: 36rem;
+  max-height: 36rem;
 
   @include common.mobile-landscape {
     max-height: 20rem;
