--- a/components/molecules/commentForm/commentForm.module.scss
+++ b/components/molecules/commentForm/commentForm.module.scss
@@ -7,10 +7,10 @@
 
 .commentInput {
   min-width: 100%;
-  height: 2rem;
-  min-height: 2rem;
+  height: 2.5rem;
+  min-height: 2.5rem;
   resize: vertical;
-  border-radius: var(--radius-small);
+  border-radius: var(--radius-medium);
   border-bottom-right-radius: 0;
   border: 1px solid var(--color-secondary);
   padding: 0.5rem;
