--- a/components/organisms/postModal/postModal.module.scss
+++ b/components/organisms/postModal/postModal.module.scss
@@ -3,7 +3,7 @@
 .container {
   position: relative;
   z-index: 1;
-  width: 36rem;
+  width: 23rem;
   background-color: var(--white);
   left: 0;
   right: 0;
@@ -17,11 +17,10 @@
     width: auto;
     display: grid;
     overflow-y: scroll;
-    grid-template-columns: 15rem 15rem;
+    grid-template-columns: 15rem 17rem;
     grid-template-rows: auto auto auto 1fr;
     border-radius: var(--radius-small);
   }
-
 
   @include common.mediaquery('desktop') {
     width: auto;
@@ -46,7 +45,7 @@
     grid-column: 2 / 3;
   }
 
-  @include common.mediaquery('desktop') {
+  @include common.mediaquery('tablet') {
     grid-column: 2 / 3;
   }
 }
@@ -59,10 +58,6 @@
 .postButtons {
   grid-column: 2 / 3;
   padding-right: 1rem;
-
-  @include common.mobile-landscape {
-    padding: 0 1rem;
-  }
 }
 
 
@@ -73,7 +68,7 @@
   @include common.mobile-landscape {
     grid-column: 2 / 3;
     margin-top: 0;
-    height: 10rem;
+    height: 3rem;
   }
 
   @include common.mediaquery('desktop') {
@@ -90,7 +85,7 @@
 
   @include common.mobile-landscape {
     grid-column: 2 / 3;
-    height: 10rem;
+    height: 5em;
   }
 
 
@@ -109,6 +104,7 @@
   align-items: center;
   width: 100%;
 
+
   @include common.mediaquery('desktop') {
     height: 100%;
     border-right: 1px solid var(--color-gray);
@@ -119,17 +115,17 @@
   z-index: 2;
   height: 100%;
   object-fit: contain;
-  width: 36rem;
-  max-height: 36rem;
+  width: 23rem;
+  max-height: 23rem;
 
   @include common.mobile-landscape {
-    max-height: 20rem;
-    width: 25rem;
+    width: 15rem;
+    max-height: 15rem;
   }
 
-  @include common.mediaquery('desktop') {
-    width: 55rem;
-    max-height: 65rem;
+  @include common.mediaquery('tablet') {
+    width: 25rem;
+    max-height: 25rem;
   }
 
   @include common.mediaquery('desktop') {
