--- a/components/molecules/comment/comment.module.scss
+++ b/components/molecules/comment/comment.module.scss
@@ -2,7 +2,7 @@
 
 .comment {
   display: grid;
-  grid-template-columns: 4.5rem 1fr;
+  grid-template-columns: 2.5rem 1fr;
   grid-template-rows: 1fr auto;
   padding: 1rem 0;
   row-gap: 1rem;
@@ -44,21 +44,12 @@
 .avatar {
   justify-self: center;
   margin-top: 0.25rem;
-  width: 3rem;
-  height: 3rem;
-
-  @include common.mobile-landscape {
-    width: 2rem;
-    height: 2rem;
-  }
 }
-
-
 
 .author {
   font-weight: 600;
   display: inline;
-
+  font-size: 1rem;
 }
 
 .content {
@@ -76,14 +67,15 @@
   margin-left: 0.5rem;
   border: none;
   background-color: transparent;
+  font-size: 1rem;
 }
 
 .info {
   grid-column: 1 / 3;
   display: flex;
   align-items: center;
-  gap: 2rem;
-  padding-right: 1rem;
+  gap: 0.5rem;
+  padding-right: 0.5rem;
 }
 
 .likeBtn {
@@ -98,8 +90,8 @@
     margin-left: auto;
   }
 
-  > svg {
-    width: 2rem;
-    height: 2rem;
+  >svg {
+    width: 1.25rem;
+    height: 1.25rem;
   }
 }
