--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -29,9 +29,9 @@
   display: none;
 
   @include common.mediaquery('desktop') {
-    max-width: 25rem;
+    max-width: 20vw;
     position: sticky;
-    right: 3rem;
+    right: 2rem;
     top: 0;
     height: 100vh;
 
@@ -40,7 +40,7 @@
 
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: 2rem;
     flex-grow: 1;
 
     border-left: 1px solid var(--color-gray);
@@ -50,7 +50,33 @@
 
 .asideItem {
   border-radius: var(--radius-medium);
-  padding: 1rem;
+  padding: 1.25rem;
   box-shadow: var(--shadow-primary);
   background-color: var(--bg-secondary);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.asideList {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.asideListItem {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.asideFollowButton {
+  padding: 0.5rem 1rem;
+  margin-left: auto;
+}
+
+.avatar {
+  width: 2.5rem;
+  height: 2.5rem;
 }
