--- a/components/pages/createPost/createPost.module.scss
+++ b/components/pages/createPost/createPost.module.scss
@@ -2,9 +2,9 @@
 
 .createPost {
   display: grid;
-  width: min(90%, 60rem);
-  margin: 0 auto;
-  margin-top: 2rem;
+  width: min(85%, 60rem);
+  margin: 2rem auto;
+  margin-bottom: 4rem;
   gap: 2rem;
 }
 
