--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -1,7 +1,7 @@
 @use '/styles/common.scss';
 
 .button {
-  border-radius: var(--radius-medium);
+  border-radius: var(--radius-small);
   background-color: var(--color-primary);
   color: var(--white);
   font-weight: 500;
@@ -30,6 +30,10 @@
     opacity: 0.7;
   }
 
+  @include common.mediaquery('tablet') {
+    border-radius: var(--radius-medium);
+  }
+
   @include common.mediaquery('desktop') {
     padding: 0.75rem 1.5rem;
   }
@@ -37,7 +41,7 @@
 
 .button-secondary {
   @extend .button;
-  background-color: transparent;
+  background-color: var(--white);
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
 
