--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -68,12 +68,17 @@
 .asideListItem {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: 0.75rem;
 }
 
 .asideFollowButton {
   padding: 0.5rem 1rem;
   margin-left: auto;
+}
+
+.username {
+  font-weight: 600;
+  font-size: 1.25rem;
 }
 
 .avatar {
