--- a/components/pages/home/home.module.scss
+++ b/components/pages/home/home.module.scss
@@ -16,6 +16,7 @@
   align-items: center;
   gap: 3rem;
   margin-top: 2rem;
+  margin-bottom: 4rem;
 
   @include common.mediaquery('desktop') {
     grid-auto-columns: auto;
@@ -29,19 +30,20 @@
   display: none;
 
   @include common.mediaquery('desktop') {
-    max-width: 20vw;
     position: sticky;
-    right: 2rem;
+    right: 0;
     top: 0;
     height: 100vh;
 
+    flex-grow: 0;
+    width: clamp(25rem, 27%, 50rem);
     padding-top: 3rem;
+    padding-right: 2rem;
     padding-left: 2rem;
 
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    flex-grow: 1;
 
     border-left: 1px solid var(--color-gray);
   }
@@ -72,7 +74,6 @@
 }
 
 .asideFollowButton {
-  padding: 0.5rem 1rem;
   margin-left: auto;
 }
 
@@ -82,6 +83,6 @@
 }
 
 .avatar {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 2.25rem;
+  height: 2.25rem;
 }
