--- a/components/atoms/button/button.module.scss
+++ b/components/atoms/button/button.module.scss
@@ -1,18 +1,16 @@
 @use '/styles/common.scss';
 
 .button {
-  border-radius: var(--radius-small);
+  border-radius: var(--radius-medium);
   background-color: var(--color-primary);
   color: var(--white);
   font-weight: 500;
   border: none;
   transition: all var(--transition-fast);
-  padding: 0.35rem 0.7rem;
+  padding: 0.4rem 0.65rem;
   text-align: center;
-
-  &::first-letter {
-    text-transform: uppercase;
-  }
+  display: flex;
+  text-transform: capitalize;
 
   &:focus {
     outline: none;
@@ -30,12 +28,8 @@
     opacity: 0.7;
   }
 
-  @include common.mediaquery('tablet') {
-    border-radius: var(--radius-medium);
-  }
-
   @include common.mediaquery('desktop') {
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 0.9rem;
   }
 }
 
@@ -44,11 +38,6 @@
   background-color: var(--white);
   color: var(--color-primary);
   box-shadow: inset 0 0 0 2px var(--color-primary);
-
-  &:hover,
-  &:focus {
-    background-color: var(--bg-primary);
-  }
 
   &:disabled {
     background-color: transparent;
