--- a/components/molecules/postFooter/postFooter.module.scss
+++ b/components/molecules/postFooter/postFooter.module.scss
@@ -10,6 +10,9 @@
 
 .descriptionContainer {
     margin-top: 0.5rem;
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .description {
